[package]
name = "bv"
version = "0.6.3"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Bit-vectors and bit-slices"
repository = "https://github.com/tov/bv-rs"
homepage = "https://github.com/tov/bv-rs"
documentation = "http://docs.rs/bv/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["bitvector", "bit", "vector", "bitvec", "bitset"]
build = "build.rs"

[features]
u128 = []

[dev-dependencies]
quickcheck = "0.6.2"

[build-dependencies]
rustc_version = "0.2"
