[package]
name = "bv"
version = "0.11.1"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Bit-vectors and bit-slices"
repository = "https://github.com/tov/bv-rs"
documentation = "http://tov.github.io/bv-rs/bv/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["bitvector", "bit", "vector", "bitvec", "bitset"]
categories = ["data-structures"]
build = "build.rs"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[build-dependencies]
feature-probe = "0.1.0"

[dev-dependencies]
quickcheck = "0.6.2"

[package.metadata.docs.rs]
features = ["serde"]

